[package]
name = "momir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.18", features = ["derive"] }
scryfall = "0.17.8"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
